deploy/kustomize/base/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  selector:
    app.kubernetes.io/name: minio
    app.kubernetes.io/component: server
  ports:
    - name: s3
      port: 9000
      targetPort: s3
      protocol: TCP
